# atupp

./: .gitignore  README.md  Taskfile.yml
python/: plot_props.py  plot_quadrant.py  plot_quadrants_map.py  plot_reds_map.py  plot_significant_quadrants_map.py  plot_stations_within_pp.py  reproj_to_meters.py
python/london stations/: get_stations.py  station_coords.py
python/props/: plot_props.py
rust/: Cargo.toml
rust/src/: data_wrangling.rs  lib.rs  plotting.rs  traits.rs
