[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { version = "0.23.0", features=["use-proj"] }
geojson = { version = "0.24.0", features=["geo-types"] }
rayon = "1.5"
itertools = "0.10.5"

